// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletsList should group starred wallets at the top 1`] = `
<DocumentFragment>
  <div
    class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="-mt-3 css-1m6rt2i"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
              role="row"
            >
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-1 min-w-1"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top"
                >
                  <div
                    class=""
                  >
                    <div
                      class="border-r border-theme-secondary-300 py-0.5 pr-3 dark:border-theme-secondary-800"
                    >
                      <button
                        class="flex shrink-0 cursor-pointer items-center justify-center rounded ring-theme-primary-400 ring-offset-theme-background focus:outline-none focus:ring-2 focus:ring-offset-8"
                        data-testid="WalletIcon__Starred__header"
                        type="button"
                      >
                        <div
                          class="text-theme-warning-400 css-tuuiwl"
                          height="18"
                          width="18"
                        >
                          <svg>
                            star-filled.svg
                          </svg>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold no-border"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top -ml-3"
                >
                  <div
                    class=""
                  >
                    Wallet
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity ml-2"
                  >
                    <div
                      class="transition-transform rotate-180 css-15txs7d"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-36 min-w-36"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div
                    class=""
                  >
                    Info
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-40 min-w-40"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top flex-row-reverse justify-end flex-row-reverse"
                >
                  <div
                    class=""
                  >
                    Balance
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                  >
                    <div
                      class="transition-transform rotate-180 css-15txs7d"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden lg:table-cell w-32 min-w-32"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top justify-end flex-row-reverse"
                >
                  <div
                    class=""
                  >
                    Currency
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                  >
                    <div
                      class="transition-transform rotate-180 css-15txs7d"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold no-border w-1"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div
                    class=""
                  >
                    Actions
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="group css-1gk67vk"
              data-testid="TableRow"
            >
              <td
                data-testid="TableCell_Starred"
              >
                <div
                  class="space-x-3 css-7ewq14"
                >
                  <div
                    class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-5"
                  >
                    <div
                      class="flex shrink-0 items-center justify-center"
                      data-testid="WalletIcon__Starred"
                    >
                      <div
                        class="text-theme-warning-400 css-tuuiwl"
                        height="18"
                        width="18"
                      >
                        <svg>
                          star-filled.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                data-testid="TableCell_Wallet"
              >
                <div
                  class="-ml-3 space-x-3 css-1rods8x"
                >
                  <div
                    class="flex shrink-0 items-center"
                  >
                    <div
                      class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-xjjrn6"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="w-20 flex-1 overflow-hidden"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
                    >
                      <span
                        class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                        data-testid="Address__alias"
                      >
                        <span
                          class="css-u3jrna"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 2
                        </span>
                      </span>
                      <span
                        class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle css-1rods8x"
                >
                  <div
                    class="inline-flex items-center space-x-1"
                  >
                    <div
                      class="inline-block p-1 text-theme-secondary-700"
                      data-testid="WalletIcon__SecondSignature"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          second-signature.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="inline-block p-1 text-theme-secondary-700"
                      data-testid="WalletIcon__TestNetwork"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          code.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="font-semibold justify-end css-1rods8x"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    57.68 DARK
                  </span>
                </div>
              </td>
              <td
                class="hidden lg:table-cell"
                data-testid="CurrencyCell"
              >
                <div
                  class="justify-end css-1rods8x"
                >
                  <span
                    class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
                  >
                    N/A
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end text-theme-secondary-text css-16k0yyn"
                >
                  <div>
                    <button
                      class="text-theme-primary-600 hover:text-theme-primary-700 css-12xyeiw"
                      data-testid="WalletListItem__send-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Send
                      </div>
                    </button>
                  </div>
                  <div
                    class=""
                    data-testid="WalletListItem__more-button"
                  >
                    <div
                      class="static sm:relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <button
                          class="-mr-1.5 text-theme-primary-300 hover:text-theme-primary-600 css-12xyeiw"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="css-1i4b0eq"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ellipsis-vertical.svg
                              </svg>
                            </div>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="group css-1gk67vk"
              data-testid="TableRow"
            >
              <td
                data-testid="TableCell_Starred"
              >
                <div
                  class="space-x-3 css-7ewq14"
                >
                  <div
                    class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-5"
                  >
                    <div
                      class="flex shrink-0 items-center justify-center"
                      data-testid="WalletIcon__Starred"
                    >
                      <div
                        class="text-theme-warning-400 css-tuuiwl"
                        height="18"
                        width="18"
                      >
                        <svg>
                          star.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                data-testid="TableCell_Wallet"
              >
                <div
                  class="-ml-3 space-x-3 css-1rods8x"
                >
                  <div
                    class="flex shrink-0 items-center"
                  >
                    <div
                      class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-xjjrn6"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="w-20 flex-1 overflow-hidden"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
                    >
                      <span
                        class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                        data-testid="Address__alias"
                      >
                        <span
                          class="css-u3jrna"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <span
                        class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle css-1rods8x"
                >
                  <div
                    class="inline-flex items-center space-x-1"
                  >
                    <div
                      class="inline-block p-1 text-theme-secondary-700"
                      data-testid="WalletIcon__TestNetwork"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          code.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="font-semibold justify-end css-1rods8x"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    33.75089801 DARK
                  </span>
                </div>
              </td>
              <td
                class="hidden lg:table-cell"
                data-testid="CurrencyCell"
              >
                <div
                  class="justify-end css-1rods8x"
                >
                  <span
                    class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
                  >
                    N/A
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end text-theme-secondary-text css-16k0yyn"
                >
                  <div>
                    <button
                      class="text-theme-primary-600 hover:text-theme-primary-700 css-12xyeiw"
                      data-testid="WalletListItem__send-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Send
                      </div>
                    </button>
                  </div>
                  <div
                    class=""
                    data-testid="WalletListItem__more-button"
                  >
                    <div
                      class="static sm:relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <button
                          class="-mr-1.5 text-theme-primary-300 hover:text-theme-primary-600 css-12xyeiw"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="css-1i4b0eq"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ellipsis-vertical.svg
                              </svg>
                            </div>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="my-8 flex w-full justify-center"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render 1`] = `
<DocumentFragment>
  <div
    class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="-mt-3 css-1m6rt2i"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
              role="row"
            >
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-1 min-w-1"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top"
                >
                  <div
                    class=""
                  >
                    <div
                      class="border-r border-theme-secondary-300 py-0.5 pr-3 dark:border-theme-secondary-800"
                    >
                      <button
                        class="flex shrink-0 cursor-pointer items-center justify-center rounded ring-theme-primary-400 ring-offset-theme-background focus:outline-none focus:ring-2 focus:ring-offset-8"
                        data-testid="WalletIcon__Starred__header"
                        type="button"
                      >
                        <div
                          class="text-theme-warning-400 css-tuuiwl"
                          height="18"
                          width="18"
                        >
                          <svg>
                            star-filled.svg
                          </svg>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold no-border"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top -ml-3"
                >
                  <div
                    class=""
                  >
                    Wallet
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity ml-2"
                  >
                    <div
                      class="transition-transform rotate-180 css-15txs7d"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-36 min-w-36"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div
                    class=""
                  >
                    Info
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-40 min-w-40"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top flex-row-reverse justify-end flex-row-reverse"
                >
                  <div
                    class=""
                  >
                    Balance
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                  >
                    <div
                      class="transition-transform rotate-180 css-15txs7d"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden lg:table-cell w-32 min-w-32"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top justify-end flex-row-reverse"
                >
                  <div
                    class=""
                  >
                    Currency
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                  >
                    <div
                      class="transition-transform rotate-180 css-15txs7d"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold no-border w-1"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div
                    class=""
                  >
                    Actions
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="group css-1gk67vk"
              data-testid="TableRow"
            >
              <td
                data-testid="TableCell_Starred"
              >
                <div
                  class="space-x-3 css-7ewq14"
                >
                  <div
                    class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-5"
                  >
                    <div
                      class="flex shrink-0 items-center justify-center"
                      data-testid="WalletIcon__Starred"
                    >
                      <div
                        class="text-theme-warning-400 css-tuuiwl"
                        height="18"
                        width="18"
                      >
                        <svg>
                          star.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                data-testid="TableCell_Wallet"
              >
                <div
                  class="-ml-3 space-x-3 css-1rods8x"
                >
                  <div
                    class="flex shrink-0 items-center"
                  >
                    <div
                      class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-xjjrn6"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                      >
                        <img
                          alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                          title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="w-20 flex-1 overflow-hidden"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
                    >
                      <span
                        class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                        data-testid="Address__alias"
                      >
                        <span
                          class="css-u3jrna"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 1
                        </span>
                      </span>
                      <span
                        class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle css-1rods8x"
                >
                  <div
                    class="inline-flex items-center space-x-1"
                  >
                    <div
                      class="inline-block p-1 text-theme-secondary-700"
                      data-testid="WalletIcon__TestNetwork"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          code.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="font-semibold justify-end css-1rods8x"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    33.75089801 DARK
                  </span>
                </div>
              </td>
              <td
                class="hidden lg:table-cell"
                data-testid="CurrencyCell"
              >
                <div
                  class="justify-end css-1rods8x"
                >
                  <span
                    class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
                  >
                    N/A
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end text-theme-secondary-text css-16k0yyn"
                >
                  <div>
                    <button
                      class="text-theme-primary-600 hover:text-theme-primary-700 css-12xyeiw"
                      data-testid="WalletListItem__send-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Send
                      </div>
                    </button>
                  </div>
                  <div
                    class=""
                    data-testid="WalletListItem__more-button"
                  >
                    <div
                      class="static sm:relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <button
                          class="-mr-1.5 text-theme-primary-300 hover:text-theme-primary-600 css-12xyeiw"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="css-1i4b0eq"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ellipsis-vertical.svg
                              </svg>
                            </div>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class="group css-1gk67vk"
              data-testid="TableRow"
            >
              <td
                data-testid="TableCell_Starred"
              >
                <div
                  class="space-x-3 css-7ewq14"
                >
                  <div
                    class="flex items-center border-r border-theme-secondary-300 pr-3 dark:border-theme-secondary-800 h-5"
                  >
                    <div
                      class="flex shrink-0 items-center justify-center"
                      data-testid="WalletIcon__Starred"
                    >
                      <div
                        class="text-theme-warning-400 css-tuuiwl"
                        height="18"
                        width="18"
                      >
                        <svg>
                          star.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                data-testid="TableCell_Wallet"
              >
                <div
                  class="-ml-3 space-x-3 css-1rods8x"
                >
                  <div
                    class="flex shrink-0 items-center"
                  >
                    <div
                      class="ring-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-xjjrn6"
                      data-testid="Avatar"
                    >
                      <div
                        class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                      >
                        <img
                          alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                          src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                          title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="w-20 flex-1 overflow-hidden"
                  >
                    <div
                      class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full"
                    >
                      <span
                        class="font-semibold text-base text-sm text-theme-text group-hover:text-theme-primary-700 w-full truncate"
                        data-testid="Address__alias"
                      >
                        <span
                          class="css-u3jrna"
                          data-testid="TruncateEnd"
                        >
                          ARK Wallet 2
                        </span>
                      </span>
                      <span
                        class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                        data-testid="Address__address"
                      >
                        D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                      </span>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="justify-center text-sm font-bold text-center align-middle css-1rods8x"
                >
                  <div
                    class="inline-flex items-center space-x-1"
                  >
                    <div
                      class="inline-block p-1 text-theme-secondary-700"
                      data-testid="WalletIcon__SecondSignature"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          second-signature.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="inline-block p-1 text-theme-secondary-700"
                      data-testid="WalletIcon__TestNetwork"
                    >
                      <div
                        class="css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          code.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td>
                <div
                  class="font-semibold justify-end css-1rods8x"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    57.68 DARK
                  </span>
                </div>
              </td>
              <td
                class="hidden lg:table-cell"
                data-testid="CurrencyCell"
              >
                <div
                  class="justify-end css-1rods8x"
                >
                  <span
                    class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
                  >
                    N/A
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end text-theme-secondary-text css-16k0yyn"
                >
                  <div>
                    <button
                      class="text-theme-primary-600 hover:text-theme-primary-700 css-12xyeiw"
                      data-testid="WalletListItem__send-button"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Send
                      </div>
                    </button>
                  </div>
                  <div
                    class=""
                    data-testid="WalletListItem__more-button"
                  >
                    <div
                      class="static sm:relative"
                    >
                      <span
                        data-testid="dropdown__toggle"
                      >
                        <button
                          class="-mr-1.5 text-theme-primary-300 hover:text-theme-primary-600 css-12xyeiw"
                          type="button"
                        >
                          <div
                            class="flex items-center space-x-2"
                          >
                            <div
                              class="css-1i4b0eq"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ellipsis-vertical.svg
                              </svg>
                            </div>
                          </div>
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="my-8 flex w-full justify-center"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render empty skeleton block 1`] = `
<DocumentFragment>
  <div
    class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="-mt-3 css-1m6rt2i"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
              role="row"
            >
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-1 min-w-1"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top"
                >
                  <div
                    class=""
                  >
                    <div
                      class="border-r border-theme-secondary-300 py-0.5 pr-3 dark:border-theme-secondary-800"
                    >
                      <button
                        class="flex shrink-0 cursor-pointer items-center justify-center rounded ring-theme-primary-400 ring-offset-theme-background focus:outline-none focus:ring-2 focus:ring-offset-8"
                        data-testid="WalletIcon__Starred__header"
                        type="button"
                      >
                        <div
                          class="text-theme-warning-400 css-tuuiwl"
                          height="18"
                          width="18"
                        >
                          <svg>
                            star-filled.svg
                          </svg>
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold no-border"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top -ml-3"
                >
                  <div
                    class=""
                  >
                    Wallet
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity ml-2"
                  >
                    <div
                      class="transition-transform rotate-180 css-15txs7d"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-36 min-w-36"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top justify-center"
                >
                  <div
                    class=""
                  >
                    Info
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold w-40 min-w-40"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top flex-row-reverse justify-end flex-row-reverse"
                >
                  <div
                    class=""
                  >
                    Balance
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                  >
                    <div
                      class="transition-transform rotate-180 css-15txs7d"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hidden lg:table-cell w-32 min-w-32"
                colspan="1"
                data-testid="table__th--4"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top justify-end flex-row-reverse"
                >
                  <div
                    class=""
                  >
                    Currency
                  </div>
                  <div
                    class="flex items-center text-theme-secondary-500 dark:text-theme-secondary-700 transition-opacity opacity-0 group-hover:opacity-100 ml-auto mr-2"
                  >
                    <div
                      class="transition-transform rotate-180 css-15txs7d"
                      height="10"
                      role="img"
                      width="10"
                    >
                      <svg>
                        chevron-down-small.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold no-border w-1"
                colspan="1"
                data-testid="table__th--5"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div
                    class=""
                  >
                    Actions
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class=" css-1li86da"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="items-center space-x-3 css-7ewq14"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 18px; height: 18px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                  <div
                    class="flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-3 space-x-3 pl-3"
                  >
                    <div
                      class="border-transparent ring-theme-background duration-100 css-1jea4xx"
                    >
                      <span>
                        <span
                          class="flex max-w-full items-center overflow-hidden leading-none"
                        >
                          <span
                            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                            style="width: 20px; height: 20px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                          ‌
                        </span>
                      </span>
                    </div>
                  </div>
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 200px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-center css-1rods8x"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 100px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end css-1rods8x"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 150px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end css-1rods8x"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 100px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end text-theme-secondary-text css-16k0yyn"
                >
                  <button
                    class="ml-3 -mr-3 text-theme-primary-600 hover:text-theme-primary-700 css-127bt7l"
                    data-testid="WalletHeader__send-button"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Send
                    </div>
                  </button>
                  <div
                    class="ml-3"
                    data-testid="WalletHeader__more-button"
                  >
                    <button
                      class="w-11 -mr-1.5 text-theme-primary-300 hover:text-theme-primary-600 css-127bt7l"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class=" css-1li86da"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="items-center space-x-3 css-7ewq14"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 18px; height: 18px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                  <div
                    class="flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-3 space-x-3 pl-3"
                  >
                    <div
                      class="border-transparent ring-theme-background duration-100 css-1jea4xx"
                    >
                      <span>
                        <span
                          class="flex max-w-full items-center overflow-hidden leading-none"
                        >
                          <span
                            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                            style="width: 20px; height: 20px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                          ‌
                        </span>
                      </span>
                    </div>
                  </div>
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 200px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-center css-1rods8x"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 100px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end css-1rods8x"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 150px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end css-1rods8x"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 100px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end text-theme-secondary-text css-16k0yyn"
                >
                  <button
                    class="ml-3 -mr-3 text-theme-primary-600 hover:text-theme-primary-700 css-127bt7l"
                    data-testid="WalletHeader__send-button"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Send
                    </div>
                  </button>
                  <div
                    class="ml-3"
                    data-testid="WalletHeader__more-button"
                  >
                    <button
                      class="w-11 -mr-1.5 text-theme-primary-300 hover:text-theme-primary-600 css-127bt7l"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              class=" css-1li86da"
              data-testid="TableRow"
            >
              <td>
                <div
                  class="items-center space-x-3 css-7ewq14"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 18px; height: 18px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                  <div
                    class="flex items-center border-l border-theme-secondary-300 dark:border-theme-secondary-800 ml-3 space-x-3 pl-3"
                  >
                    <div
                      class="border-transparent ring-theme-background duration-100 css-1jea4xx"
                    >
                      <span>
                        <span
                          class="flex max-w-full items-center overflow-hidden leading-none"
                        >
                          <span
                            class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                            style="width: 20px; height: 20px; border-radius: 50%;"
                          >
                            ‌
                          </span>
                          ‌
                        </span>
                      </span>
                    </div>
                  </div>
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 200px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-center css-1rods8x"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 100px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end css-1rods8x"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 150px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end css-1rods8x"
                >
                  <span>
                    <span
                      class="flex max-w-full items-center overflow-hidden leading-none"
                    >
                      <span
                        class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                        style="width: 100px; height: 16px;"
                      >
                        ‌
                      </span>
                      ‌
                    </span>
                  </span>
                </div>
              </td>
              <td>
                <div
                  class="justify-end text-theme-secondary-text css-16k0yyn"
                >
                  <button
                    class="ml-3 -mr-3 text-theme-primary-600 hover:text-theme-primary-700 css-127bt7l"
                    data-testid="WalletHeader__send-button"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      Send
                    </div>
                  </button>
                  <div
                    class="ml-3"
                    data-testid="WalletHeader__more-button"
                  >
                    <button
                      class="w-11 -mr-1.5 text-theme-primary-300 hover:text-theme-primary-600 css-127bt7l"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            ellipsis-vertical.svg
                          </svg>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="my-8 flex w-full justify-center"
    />
  </div>
</DocumentFragment>
`;

exports[`WalletsList should render responsive 1`] = `
<DocumentFragment>
  <div
    class="px-8 pb-6 md:px-4 md:pb-0 md:pt-6"
    data-testid="WalletsList"
  >
    <div
      data-testid="WalletTable"
    >
      <div
        class="space-y-3"
      >
        <div
          class="w-full rounded-xl bg-theme-primary-100 p-2 dark:border-2 dark:border-theme-secondary-800 dark:bg-transparent"
          data-testid="ListItemSmall"
        >
          <div
            class="flex items-center space-x-4 p-4 pt-2 pr-2"
          >
            <div
              class="flex shrink-0 items-center"
            >
              <div
                class="ring-theme-primary-100 dark:ring-transparent shrink-0 css-1qcfibg"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex w-20 flex-1 flex-col font-semibold"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full space-y-1"
              >
                <span
                  class="font-semibold text-base text-sm text-theme-text w-full truncate"
                  data-testid="Address__alias"
                >
                  <span
                    class="css-u3jrna"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
            <div
              class="flex items-center space-x-2 self-start"
            >
              <div
                class="inline-flex items-center space-x-1 border-r border-theme-secondary-300 pr-1 empty:border-r-0 dark:border-theme-secondary-800"
              >
                <div
                  class="inline-block p-1 text-theme-secondary-700"
                  data-testid="WalletIcon__TestNetwork"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg>
                      code.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex shrink-0 items-center justify-center"
                data-testid="WalletIcon__Starred"
              >
                <div
                  class="text-theme-warning-400 css-tuuiwl"
                  height="18"
                  width="18"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex overflow-hidden rounded-xl"
          >
            <div
              class="flex flex-1 flex-col justify-between space-y-1 bg-theme-primary-500 py-3 px-4 font-semibold"
            >
              <span
                class="whitespace-nowrap text-sm text-white"
                data-testid="Amount"
              >
                33.75089801 DARK
              </span>
              <span
                class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
              >
                N/A
              </span>
            </div>
            <div
              class="flex"
            >
              <button
                class="flex flex-grow items-center justify-center bg-theme-primary-600 py-3 px-3 font-semibold text-white"
                data-testid="ListItemSmall--button"
                type="button"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    double-arrow-right.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
        <div
          class="w-full rounded-xl bg-theme-primary-100 p-2 dark:border-2 dark:border-theme-secondary-800 dark:bg-transparent"
          data-testid="ListItemSmall"
        >
          <div
            class="flex items-center space-x-4 p-4 pt-2 pr-2"
          >
            <div
              class="flex shrink-0 items-center"
            >
              <div
                class="ring-theme-primary-100 dark:ring-transparent shrink-0 css-1qcfibg"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                >
                  <img
                    alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                    title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                  />
                </div>
              </div>
            </div>
            <div
              class="flex w-20 flex-1 flex-col font-semibold"
            >
              <div
                class="no-ligatures flex overflow-hidden whitespace-nowrap flex-col items-start w-full space-y-1"
              >
                <span
                  class="font-semibold text-base text-sm text-theme-text w-full truncate"
                  data-testid="Address__alias"
                >
                  <span
                    class="css-u3jrna"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 2
                  </span>
                </span>
                <span
                  class="min-w-0 overflow-hidden text-xs text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                </span>
              </div>
            </div>
            <div
              class="flex items-center space-x-2 self-start"
            >
              <div
                class="inline-flex items-center space-x-1 border-r border-theme-secondary-300 pr-1 empty:border-r-0 dark:border-theme-secondary-800"
              >
                <div
                  class="inline-block p-1 text-theme-secondary-700"
                  data-testid="WalletIcon__SecondSignature"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg>
                      second-signature.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="inline-block p-1 text-theme-secondary-700"
                  data-testid="WalletIcon__TestNetwork"
                >
                  <div
                    class="css-v0ob3f"
                    height="16"
                    width="16"
                  >
                    <svg>
                      code.svg
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="flex shrink-0 items-center justify-center"
                data-testid="WalletIcon__Starred"
              >
                <div
                  class="text-theme-warning-400 css-tuuiwl"
                  height="18"
                  width="18"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex overflow-hidden rounded-xl"
          >
            <div
              class="flex flex-1 flex-col justify-between space-y-1 bg-theme-primary-500 py-3 px-4 font-semibold"
            >
              <span
                class="whitespace-nowrap text-sm text-white"
                data-testid="Amount"
              >
                57.68 DARK
              </span>
              <span
                class="text-xs font-semibold text-theme-secondary-900 md:text-base md:text-theme-secondary-500 dark:md:text-theme-secondary-700"
              >
                N/A
              </span>
            </div>
            <div
              class="flex"
            >
              <button
                class="flex flex-grow items-center justify-center bg-theme-primary-600 py-3 px-3 font-semibold text-white"
                data-testid="ListItemSmall--button"
                type="button"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg>
                    double-arrow-right.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="my-8 flex w-full justify-center"
    />
  </div>
</DocumentFragment>
`;
